--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                </div>
                <div class="links">
                 <img src="./assets/library.svg" alt="Library">
-                <p>Your Library</p>
+               <a href="./player.html"> <p>Your Library</p></a> 
                </div>
             </div>
             <div class="nav-links-2">
