--- a/player.html
+++ b/player.html
@@ -73,7 +73,11 @@
                 <div class="right-second-2">
                     <table >
                         <thead>
-                            <th>#  TITLE</th>
+                            <th>
+                                <div class="serial">
+                                    <p>#  </p>
+                                    <p>TITLE </p>
+                                </div></th>
                             <th>ALBUM</th>
                             <th>DATE ADDED</th>
                             <th></th>
